Harden command and storage error handling
Malformed input and failed loads can corrupt or replace task data.

Validate commands and records, enforce task invariants, and guard atomic saves.

Expand JUnit and console UI coverage for the new failure cases.